# Docker-Carbon-Optimizer

./: .gitignore  README.md  emissions.csv  powermetrics_log.txt  pyproject.toml
docs/: raw-impl-plan.md  raw-test-plan.md  research.md
scripts/: collect_image_sizes.py
src/dco/: __init__.py  cli.py  config.py  fixer.py  fixer_templates.py  output.py  parser.py
src/dco/carbon/: __init__.py  build.py  estimator.py  pull_frequency.py
src/dco/data/: __init__.py  dev_packages.json  grid_intensity.json  image_sizes.json
src/dco/rules/: __init__.py  _utils.py  base_image.py  dev_deps.py  dockerignore.py  multistage.py  pinning.py  run_layers.py
tests/: conftest.py  test_cli.py  test_fixer.py  test_parser.py
tests/fixtures/: .gitignore  clean_multistage.Dockerfile  dev_deps_left.Dockerfile  expected_fixed_base_image.Dockerfile  expected_fixed_runs.Dockerfile  no_multistage_go.Dockerfile  oversized_python.Dockerfile  pinned_tag.Dockerfile  simple_python.Dockerfile  slim_python.Dockerfile  uncombined_runs.Dockerfile  unpinned_tag.Dockerfile
tests/test_carbon/: test_build.py  test_estimator.py  test_pull_frequency.py
tests/test_rules/: test_base_image.py  test_dev_deps.py  test_dockerignore.py  test_multistage.py  test_pinning.py  test_run_layers.py
validation/: .gitignore  collect_dockerfiles.py  repos.json  run_validation.py
validation/dockerfiles/appwrite/: Dockerfile
validation/dockerfiles/directus/: Dockerfile
validation/dockerfiles/docker-curriculum/: Dockerfile
validation/dockerfiles/etherpad/: Dockerfile
validation/results/: results.csv
(+6 files in other folders)
